@@ -1,6 +1,5 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
 //  Copyright (c) 2012, John Haddon. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
@@ -33,16 +32,23 @@
 //
 //////////////////////////////////////////////////////////////////////////
 
-#include <boost/python.hpp>
+#include "boost/python.hpp"
 
-#include "IECoreArnold/bindings/RendererBinding.h"
-#include "IECoreArnold/bindings/UniverseBlockBinding.h"
+#include "IECoreArnold/UniverseBlock.h"
 
-using namespace IECoreArnold;
 using namespace boost::python;
+using namespace IECoreArnold;
 
-BOOST_PYTHON_MODULE( _IECoreArnold )
+namespace IECoreArnold
 {
-	bindRenderer();
-	bindUniverseBlock();
+
+void bindUniverseBlock()
+{
+
+	// This is bound with a preceding _ and then turned into a context
+	// manager for the "with" statement in IECoreArnold/UniverseBlock.py
+	class_<UniverseBlock, boost::noncopyable>( "_UniverseBlock" );
+
 }
+
+} // namespace IECoreArnold
