@@ -1,6 +1,7 @@
 ##########################################################################
 #
 #  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2012, John Haddon. All rights reserved.
 #
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -39,6 +40,7 @@ import IECore
 
 from RendererTest import RendererTest
 from ProceduralDSOTest import ProceduralDSOTest
+from UniverseBlockTest import UniverseBlockTest
 
 unittest.TestProgram(
 	testRunner = unittest.TextTestRunner(
